--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ ul {
     display: block;
 }
 .h1__title {
-    font-size: 29px;
+    font-size: 36px;
     font-weight: 400;
     color: #d78e36;
     text-transform: uppercase;
@@ -542,7 +542,7 @@ ul {
 .catalog-item__p {
     width: calc(100% - 38px);
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     margin: 0;
     position: absolute;
     top: calc(100% - 34px);
@@ -569,7 +569,7 @@ ul {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.philosophy__item__title {
+.philosophy__item-title {
     margin: 0;
     font-size: 22px;
 }
@@ -619,11 +619,6 @@ ul {
     border-radius: 50%;
     margin-bottom: 24px;
 }
-.advantages__item-img,
-.advantages__item-p {
-}
-.advantages__item-img {
-}
 .advantages__item-p {
     width: 90%;
     text-align: center;
@@ -668,8 +663,6 @@ ul {
     text-decoration: none;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-content:center; */
     align-items: center;
 }
 .contacts__item-link:hover .contacts__item-p{
@@ -681,7 +674,7 @@ ul {
 }
 .contacts__item-p {
     color: #fff;
-    font-size: 9px;
+    font-size: 12px;
     margin-top: 6px;
 }
 .all-rights-reserved {
@@ -690,7 +683,7 @@ ul {
 }
 .all-rights-reserved__p {
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
 }
 @media (max-width: 767px) {
 }
