--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,9 @@ select {
    */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
     -webkit-appearance: button;
 }
 
@@ -206,9 +206,9 @@ button,
    */
 
 button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
     border-style: none;
     padding: 0;
 }
@@ -218,9 +218,9 @@ button::-moz-focus-inner,
    */
 
 button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
     outline: 1px dotted ButtonText;
 }
 
@@ -269,8 +269,8 @@ textarea {
    * 2. Remove the padding in IE 10.
    */
 
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
     box-sizing: border-box; /* 1 */
     padding: 0; /* 2 */
 }
@@ -279,8 +279,8 @@ textarea {
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
     height: auto;
 }
 
@@ -289,7 +289,7 @@ textarea {
    * 2. Correct the outline style in Safari.
    */
 
-[type='search'] {
+[type="search"] {
     -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
 }
@@ -298,7 +298,7 @@ textarea {
    * Remove the inner padding in Chrome and Safari on macOS.
    */
 
-[type='search']::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
@@ -356,17 +356,17 @@ template {
 
 @font-face {
     /* font-weight: 400; */
-    font-family: 'Cuprum';
+    font-family: "Cuprum";
     font-style: normal;
-    src: url('../fonts/Cuprum-VariableFont_wght.woff2') format('woff2'),
-        url('../fonts/Cuprum-VariableFont_wght.woff') format('woff');
+    src: url("../fonts/Cuprum-VariableFont_wght.woff2") format("woff2"),
+        url("../fonts/Cuprum-VariableFont_wght.woff") format("woff");
 }
 @font-face {
     /* font-weight: 400; */
-    font-family: 'OpenSans';
+    font-family: "OpenSans";
     font-style: normal;
-    src: url('../fonts/Opensans.woff2') format('woff2'),
-        url('../fonts/Opensans.woff') format('woff');
+    src: url("../fonts/Opensans.woff2") format("woff2"),
+        url("../fonts/Opensans.woff") format("woff");
 }
 /******************************
 ********** Main ****************
@@ -377,7 +377,7 @@ template {
     box-sizing: border-box;
 }
 body {
-    font-family: 'OpenSans';
+    font-family: "OpenSans";
     font-size: 12px;
     font-weight: 400;
     font-style: normal;
@@ -389,7 +389,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: 'Cuprum';
+    font-family: "Cuprum";
     font-weight: 400;
     font-style: normal;
     margin: 0;
@@ -432,7 +432,7 @@ ul {
 *****************************/
 .header {
     height: 568px;
-    background-image: url('../img/manufacturing_process.jpg');
+    background-image: url("../img/manufacturing_process.jpg");
     background-repeat: no-repeat;
     background-position: center;
     /* background-position: center bottom; */
@@ -474,7 +474,7 @@ ul {
 }
 .burger::before,
 .burger::after {
-    content: '';
+    content: "";
     background-color: #fff;
     position: absolute;
     width: 100%;
@@ -521,8 +521,8 @@ ul {
 }
 @media (min-width: 1200px) {
     .header {
-        background: url('../img/header_shadow.png') 0 0 repeat-x,
-            url('../img/manufacturing_process.jpg') center/cover no-repeat;
+        background: url("../img/header_shadow.png") 0 0 repeat-x,
+            url("../img/manufacturing_process.jpg") center/cover no-repeat;
     }
     .container-header {
         height: 80px;
@@ -547,18 +547,17 @@ ul {
         display: flex;
     }
     .nav__item {
+        position: relative;
         margin-right: 40px;
         display: flex;
         flex-direction: column;
-        margin-top: 20px;
-        margin-bottom: 10px;
     }
     .nav__item-link {
         display: block;
         color: #fff;
         text-decoration: none;
         font-size: 20px;
-        font-family: 'Cuprum';
+        font-family: "Cuprum";
         font-weight: 400;
         font-style: normal;
     }
@@ -571,7 +570,6 @@ ul {
     }
     .nav-link__container {
         display: flex;
-        /* justify-self: center; */
         align-items: center;
     }
     .triangle {
@@ -583,6 +581,40 @@ ul {
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
         border-top: 8px solid #fff;
+    }
+    .sub-nav__list {
+        display: none;
+        position: absolute;
+        top: 40px;
+        left: 50%;
+        transform: translate(-50%, -22px);
+        padding-top: 14px;
+    }
+    .sub-nav__item {
+        list-style: none;
+        background-color: #191919;
+        width: 250px;
+        height: 38px;
+        margin-bottom: 2px;
+    }
+    .sub-nav__item-link {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        line-height: 38px;
+        text-align: center;
+        text-decoration: none;
+        color: #fff;
+        font-size: 20px;
+        font-family: "Cuprum";
+        font-weight: 400;
+        font-style: normal;
+    }
+    .nav__item:hover .sub-nav__list {
+        display: block;
+    }
+    .sub-nav__item-link:hover {
+        background-color: #282828;
     }
 }
 /******************************
@@ -656,7 +688,7 @@ ul {
     transform: scale(1.2);
 }
 .catalog-item__p {
-    font-family: 'Cuprum';
+    font-family: "Cuprum";
     width: calc(100% - 38px);
     text-transform: uppercase;
     font-size: 14px;
@@ -675,7 +707,7 @@ ul {
         width: calc(100% / 5);
     }
     .catalog-item__p {
-        font-size: 14px;
+        font-size: 16px;
         top: calc(100% - 40px);
     }
 }
@@ -768,7 +800,7 @@ ul {
     width: 100%;
 }
 .services__item-p {
-    font-family: 'Cuprum';
+    font-family: "Cuprum";
     font-size: 20px;
     position: absolute;
     bottom: 15px;
@@ -878,6 +910,7 @@ ul {
     color: #fff;
     font-size: 12px;
     margin-top: 6px;
+    text-align: center;
 }
 .all-rights-reserved {
     padding-top: 15px;
