--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,9 @@ select {
    */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
     -webkit-appearance: button;
 }
 
@@ -206,9 +206,9 @@ button,
    */
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
     border-style: none;
     padding: 0;
 }
@@ -218,9 +218,9 @@ button::-moz-focus-inner,
    */
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
     outline: 1px dotted ButtonText;
 }
 
@@ -269,8 +269,8 @@ textarea {
    * 2. Remove the padding in IE 10.
    */
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
     box-sizing: border-box; /* 1 */
     padding: 0; /* 2 */
 }
@@ -279,8 +279,8 @@ textarea {
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
     height: auto;
 }
 
@@ -289,7 +289,7 @@ textarea {
    * 2. Correct the outline style in Safari.
    */
 
-[type="search"] {
+[type='search'] {
     -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
 }
@@ -298,7 +298,7 @@ textarea {
    * Remove the inner padding in Chrome and Safari on macOS.
    */
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
@@ -356,17 +356,17 @@ template {
 
 @font-face {
     /* font-weight: 400; */
-    font-family: "Cuprum";
+    font-family: 'Cuprum';
     font-style: normal;
-    src: url("../fonts/Cuprum-VariableFont_wght.woff2") format("woff2"),
-        url("../fonts/Cuprum-VariableFont_wght.woff") format("woff");
+    src: url('../fonts/Cuprum-VariableFont_wght.woff2') format('woff2'),
+        url('../fonts/Cuprum-VariableFont_wght.woff') format('woff');
 }
 @font-face {
     /* font-weight: 400; */
-    font-family: "OpenSans";
+    font-family: 'OpenSans';
     font-style: normal;
-    src: url("../fonts/Opensans.woff2") format("woff2"),
-        url("../fonts/Opensans.woff") format("woff");
+    src: url('../fonts/Opensans.woff2') format('woff2'),
+        url('../fonts/Opensans.woff') format('woff');
 }
 /******************************
 ********** Main ****************
@@ -377,7 +377,7 @@ template {
     box-sizing: border-box;
 }
 body {
-    font-family: "OpenSans";
+    font-family: 'OpenSans';
     font-size: 12px;
     font-weight: 400;
     font-style: normal;
@@ -389,7 +389,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: "Cuprum";
+    font-family: 'Cuprum';
     font-weight: 400;
     font-style: normal;
     margin: 0;
@@ -432,7 +432,7 @@ ul {
 *****************************/
 .header {
     height: 568px;
-    background-image: url("../img/manufacturing_process.jpg");
+    background-image: url('../img/manufacturing_process.jpg');
     background-repeat: no-repeat;
     background-position: center;
     /* background-position: center bottom; */
@@ -448,9 +448,7 @@ ul {
 .header-nav {
     display: flex;
 }
-.nav {
-    display: none;
-}
+
 .burger {
     display: block;
     position: relative;
@@ -474,7 +472,7 @@ ul {
 }
 .burger::before,
 .burger::after {
-    content: "";
+    content: '';
     background-color: #fff;
     position: absolute;
     width: 100%;
@@ -511,6 +509,102 @@ ul {
     padding: 0;
     margin-top: 278px;
 }
+.close-button {
+	position: absolute;
+	top: 24px;
+	right: 24px;
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+}
+.close-button::before,
+.close-button::after {
+	content: '';
+	position: absolute;
+	top: 10px;
+	display: block;
+	width: 30px;
+	height: 2px;
+	background: #fff;
+}
+.close-button::before {
+	transform: rotate(45deg);
+}
+.close-button::after {
+	transform: rotate(-45deg);
+}
+.nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    background-color: #d78e36;
+    padding: 24px;
+}
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    list-style: none;
+}
+.nav__item {
+    margin-bottom: 40px;
+}
+.nav__item-link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Cuprum';
+    font-weight: 400;
+    font-style: normal;
+}
+.nav-link__container {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.triangle {
+    margin-left: 6px;
+    margin-top: 2px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 8px solid #fff;
+}
+.nav__display-none {
+    display: none;
+}
+.sub-nav__list-none {
+    display: none;
+}
+.sub-nav__list {
+    padding-left: 20px;
+}
+.sub-nav__item {
+    list-style: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.sub-nav__item-link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Cuprum';
+    font-weight: 400;
+    font-style: normal;
+}
+@media (min-width: 576px) {
+    .nav {
+        width: 70%;
+    }
+}
 @media (min-width: 768px) {
     .h1-title-main-page {
         width: 70%;
@@ -518,11 +612,14 @@ ul {
     .h1__title {
         font-size: 50px;
     }
+    .nav {
+        width: 50%;
+    }
 }
 @media (min-width: 1200px) {
     .header {
-        background: url("../img/header_shadow.png") 0 0 repeat-x,
-            url("../img/manufacturing_process.jpg") center/cover no-repeat;
+        background: url('../img/header_shadow.png') 0 0 repeat-x,
+            url('../img/manufacturing_process.jpg') center/cover no-repeat;
     }
     .container-header {
         height: 80px;
@@ -539,27 +636,31 @@ ul {
     .burger {
         display: none;
     }
+    .close-button {
+        display: none;
+    }
     .nav {
         display: block;
+        width: auto;
+        height: auto;
+        position: static;
+        padding: 0px;
+        z-index: auto;
+        background-color: transparent;
     }
     .nav__list {
-        list-style: none;
-        display: flex;
+        flex-direction: row;
+        align-items: stretch;
     }
     .nav__item {
         position: relative;
         margin-right: 40px;
+        margin-bottom: 0px;
         display: flex;
         flex-direction: column;
     }
     .nav__item-link {
         display: block;
-        color: #fff;
-        text-decoration: none;
-        font-size: 20px;
-        font-family: "Cuprum";
-        font-weight: 400;
-        font-style: normal;
     }
     .nav-title-underline {
         opacity: 0;
@@ -568,23 +669,10 @@ ul {
     .nav__item:hover .nav-title-underline {
         opacity: 1;
     }
-    .nav-link__container {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-    }
     .triangle {
-        margin-left: 6px;
         margin-top: 4px;
-        display: block;
-        width: 0;
-        height: 0;
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        border-top: 8px solid #fff;
     }
     .sub-nav__list {
-        display: none;
         position: absolute;
         top: 40px;
         left: 50%;
@@ -592,11 +680,11 @@ ul {
         padding-top: 14px;
     }
     .sub-nav__item {
-        list-style: none;
         background-color: #191919;
         width: 250px;
         height: 38px;
         margin-bottom: 2px;
+        padding: 0;
     }
     .sub-nav__item-link {
         display: inline-block;
@@ -604,26 +692,12 @@ ul {
         width: 100%;
         line-height: 38px;
         text-align: center;
-        text-decoration: none;
-        color: #fff;
-        font-size: 20px;
-        font-family: "Cuprum";
-        font-weight: 400;
-        font-style: normal;
-    }
-    /* .nav__item:hover .sub-nav__list {
-        display: block;
+        font-size: 18px;
     }
     .sub-nav__item-link:hover {
         background-color: #282828;
-    } */
+    }
     body.mouse .nav__item:hover .sub-nav__list {
-        display: block;
-    }
-    .sub-nav__item-link:hover {
-        background-color: #282828;
-    }
-    body.touch .open {
         display: block;
     }
 }
@@ -698,7 +772,7 @@ ul {
     transform: scale(1.2);
 }
 .catalog-item__p {
-    font-family: "Cuprum";
+    font-family: 'Cuprum';
     width: calc(100% - 38px);
     text-transform: uppercase;
     font-size: 14px;
@@ -810,7 +884,7 @@ ul {
     width: 100%;
 }
 .services__item-p {
-    font-family: "Cuprum";
+    font-family: 'Cuprum';
     font-size: 20px;
     position: absolute;
     bottom: 15px;
