Fixed a bug with accessible scrolling of the site content during an open menu window in the mobile and tablet versions.

--- a/css/style.css
+++ b/css/style.css
@@ -600,6 +600,9 @@ ul {
     font-weight: 400;
     font-style: normal;
 }
+.overflow-hidden {
+    overflow: hidden;
+}
 @media (min-width: 576px) {
     .nav {
         width: 70%;
