--- a/css/style.css
+++ b/css/style.css
@@ -456,11 +456,6 @@ ul {
     height: 20px;
     cursor: pointer;
 }
-.burger:hover .burger__span,
-.burger:hover:before,
-.burger:hover:after {
-    background-color: #d78e36;
-}
 
 .burger__span {
     position: absolute;
@@ -535,6 +530,7 @@ ul {
 }
 .nav {
     display: flex;
+    overflow: auto;
     flex-direction: column;
     align-items: flex-start;
     width: 80%;
