--- a/css/style.css
+++ b/css/style.css
@@ -444,10 +444,15 @@ ul {
 *****************************/
 .header {
     height: 568px;
-    background-image: url('../img/manufacturing_process.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+.header-main-page {
+    background-image: url('../img/manufacturing_process_320x568.jpg');
+}
+.header-category-page {
+    background-image: url('../img/belt_category_320x568.jpg');
 }
 .container-header {
     height: 70px;
@@ -501,19 +506,19 @@ ul {
     width: 100%;
     display: block;
 }
-.h1-main-page {
-    display: flex;
-    justify-content: flex-end;
-}
-
 .h1__title {
-    font-size: 40px;
+    font-size: 46px;
     font-weight: 400;
-    color: #d78e36;
     text-transform: uppercase;
     margin: 0;
     padding: 0;
+    margin-top: 218px;
+}
+.h1_category {
     margin-top: 278px;
+}
+.h1_yellow {
+    color: #d78e36;
 }
 .close-button {
     position: absolute;
@@ -614,13 +619,25 @@ ul {
     overflow: auto;
 }
 @media (min-width: 576px) {
+    .h1__title {
+        margin-top: 278px;
+    }
+    .header-main-page {
+        background-image: url('../img/manufacturing_process_576x568.jpg');
+    }
+    .header-category-page {
+        background-image: url('../img/belt_category_576x568.jpg');
+    }
     .nav {
         width: 70%;
     }
 }
 @media (min-width: 768px) {
-    .h1-title-main-page {
-        width: 70%;
+    .header-main-page {
+        background-image: url('../img/manufacturing_process_768x550.jpg');
+    }
+    .header-category-page {
+        background-image: url('../img/belt_category_768x550.jpg');
     }
     .h1__title {
         font-size: 54px;
@@ -630,10 +647,16 @@ ul {
     }
 }
 @media (min-width: 1200px) {
-    .header {
+    .header-main-page {
+        background-image: url('../img/manufacturing_process_1200x760.jpg');
+    }
+    .header-category-page {
+        background-image: url('../img/belt_category_1200x760.jpg');
+    }
+    /* .header {
         background: url('../img/header_shadow.png') 0 0 repeat-x,
             url('../img/manufacturing_process.jpg') center/cover no-repeat;
-    }
+    } */
     .container-header {
         height: 80px;
     }
@@ -642,9 +665,11 @@ ul {
     }
     .h1__title {
         font-size: 64px;
+        width: 80%;
     }
-    .h1-title-main-page {
-        width: 840px;
+    .h1 {
+        display: flex;
+        justify-content: flex-end;
     }
     .burger {
         display: none;
@@ -781,7 +806,7 @@ ul {
     width: 100%;
     filter: brightness(90%);
 }
-.catalog-item__img:hover {
+.catalog-item__link:hover .catalog-item__img {
     transform: scale(1.2);
 }
 .catalog-item__p {
@@ -969,7 +994,74 @@ ul {
     }
 }
 /********************************
-**** Content / Footer ****
+**** Content / Product_list ****
+*********************************/
+.products-wraper {
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-bottom: -24px;
+}
+.products-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.product {
+    list-style: none;
+    width: 50%;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-bottom: 24px;
+}
+.pruduct__link {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+}
+.pruduct__link:hover .product__img{
+    transform: scale(1.2);
+}
+.product__img-wrap {
+    overflow: hidden;
+}
+.product__img {
+    width: 100%;
+    display: block;
+    transition: 0.5s;
+}
+.product__text {
+    text-transform: uppercase;
+    line-height: 125%;
+}
+.product__title{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.product__price{
+    font-size: 16px;
+}
+@media (min-width: 576px) {
+    .product {
+        width: calc(100% / 3);
+    }
+}
+@media (min-width: 768px) {
+    .product {
+        width: calc(100% / 3);
+    }
+    .product__text {
+        font-size: 18px;
+    }
+}
+@media (min-width: 1200px) {
+    .product {
+        width: calc(100% / 3);
+    }
+    .product__text {
+        font-size: 18px;
+    }
+}
+/********************************
+************ Footer ************
 *********************************/
 .footer {
     margin-top: 40px;
